# Lab06

./: CMakeLists.txt  Node.h  Tree.cpp  Tree.h  main.cpp  tests.cpp
